# gguid

./: .gitignore  CMakeLists.txt  LICENSE  gguid.cpp  gguid.h
.github/workflows/: cmake-multi-platform.yml
